--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<head><title>프레임</title></head>
+<head><title>의사</title></head>
 <frameset rows=20%,80%>
 <frame src=top.html>
 <frameset cols=20%,80%>
