--- a/left.html
+++ b/left.html
@@ -1,5 +1,5 @@
 <html>
-<head><title>프레임</title></head>
+<head><title>의사</title></head>
 <body>
 <a href=right1.html target=right>윤봉길</a><p>
 <a href=right2.html target=right>강혜원</a>
