--- a/top.html
+++ b/top.html
@@ -1,6 +1,6 @@
 <html>
 <head><title>프레임</title></head>
 <body>
-<img src="top-image.jpg" width=100% height=100%>
+<img src="top-img.png" width=100% height=100%>
 </body>
 </html>
