--- a/left.html
+++ b/left.html
@@ -1,7 +1,9 @@
 <html>
 <head><title>의사</title></head>
 <body>
-<a href=right1.html target=right>윤봉길</a><p>
-<a href=right2.html target=right>강혜원</a>
+<a href=right1.html target=right>의과대학</a><p>
+<a href=right2.html target=right>미정</a>
+<a href=right3.html target=right>미정</a><p>
+<a href=right4.html target=right>미정</a>
 </body>
 </html>
