--- a/left.html
+++ b/left.html
@@ -2,8 +2,8 @@
 <head><title>의사</title></head>
 <body>
 <a href=right1.html target=right>의과대학</a><p>
-<a href=right2.html target=right>미정</a>
-  <a href=right3.html target=right>미정</a>
-<a href=right4.html target=right>미정</a>
+<a href=right2.html target=right>미정</a><p>
+<a href=right3.html target=right>미정</a><p>
+<a href=right4.html target=right>미정</a><p>
 </body>
 </html>
