--- a/right1.html
+++ b/right1.html
@@ -3,7 +3,7 @@
 <body>
 <table>
 <tr>
-<td><img src=youn01.jpg></td>
+<td><img src=의예과.png></td>
 <td><img src=youn02.jpg></td>
 <td><img src=youn03.jpg></td>
 </tr>
