--- a/right1.html
+++ b/right1.html
@@ -4,8 +4,8 @@
 <table>
 <tr>
 <td><img src=의예과.png></td>
-<td><img src=youn02.jpg></td>
-<td><img src=youn03.jpg></td>
+<td><img src=본과.png></td>
+<td><img src=></td>
 </tr>
 <tr>
 <td><img src=youn04.jpg></td>
