--- a/right1.html
+++ b/right1.html
@@ -5,7 +5,7 @@
 <tr>
 <td><img src=의예과.png></td>
 <td><img src=본과.png></td>
-<td><img src=></td>
+<td><img src=국가고시.png></td>
 </tr>
 <tr>
 <td><img src=youn04.jpg></td>
