--- a/left.html
+++ b/left.html
@@ -2,7 +2,7 @@
 <head><title>의사</title></head>
 <body>
 <p><a href=right1.html target=right>의사가 되는 과정</a></p>
-<p><a href=right2.html target=right>미정</a></p>
+<p><a href=right2.html target=right>군대(남자의 경우)</a></p>
 <p><a href=right3.html target=right>미정</a></p>
 <p><a href=right4.html target=right>미정</a></p>
 </body>
