--- a/right2.html
+++ b/right2.html
@@ -1,8 +1,11 @@
 <html>
-<head><title>강혜원</title></head>
+<head><title>의과대학교</title></head>
 <body>
-<video width="640" height="480" controls>
-<source src="month-7.mp4" type="video/mp4">
-</video>
+<table>
+<tr>
+<td><img src=공보의.png></td>
+<td><img src=군의관.png></td>
+</tr>
+</table>
 </body>
 </html>
