--- a/right1.html
+++ b/right1.html
@@ -7,6 +7,10 @@
 <td><img src=본과.png></td>
 <td><img src=국가고시.png></td>
 </tr>
+<tr>
+<td><img src=인턴.png></td>
+<td><img src=레지던트.png></td>
+</tr>
 </table>
 </body>
 </html>
