--- a/left.html
+++ b/left.html
@@ -3,7 +3,7 @@
 <body>
 <p><a href=right1.html target=right>의사가 되는 과정</a></p>
 <p><a href=right2.html target=right>군대(남자의 경우)</a></p>
-<p><a href=right3.html target=right>미정</a></p>
+<p><a href=right3.html target=right>의사가 말해주는 의사</a></p>
 <p><a href=right4.html target=right>미정</a></p>
 </body>
 </html>
