--- a/right3.html
+++ b/right3.html
@@ -1,8 +1,8 @@
 <html>
-<head><title>의사가 말하는 의사</title></head>
+<head><title>의사의 하루</title></head>
 <body>
 <video width="640" height="480" controls>
-<source src="의사과정.mp4" type="video/mp4">
+<source src="의사의하루.mp4" type="video/mp4">
 </video>
 </body>
 </html>
