--- a/right3.html
+++ b/right3.html
@@ -2,7 +2,7 @@
 <head><title>의사의 하루</title></head>
 <body>
 <video width="640" height="480" controls>
-<source src="의사의하루.mp4" type="video/mp4">
+<source src="의대생시험기간.mp4" type="video/mp4">
 </video>
 </body>
 </html>
