--- a/right3.html
+++ b/right3.html
@@ -1,5 +1,5 @@
 <html>
-<head><title>의사의 하루</title></head>
+<head><title>의대생의 시험기간</title></head>
 <body>
 <video width="640" height="480" controls>
 <source src="의대생시험기간.mp4" type="video/mp4">
