--- a/right3.html
+++ b/right3.html
@@ -2,7 +2,10 @@
 <head><title>의대생의 시험기간</title></head>
 <body>
 <video width="640" height="480" controls>
-<source src="의대생시험기간.mp4" type="video/mp4">
+<source src="의대생시험기간1.mp4" type="video/mp4">
+</video>
+<video width="640" height="480" controls>
+<source src="의대생시험기간2.mp4" type="video/mp4">
 </video>
 </body>
 </html>
