--- a/right4.html
+++ b/right4.html
@@ -1,8 +1,12 @@
 <html>
-<head><title>강혜원</title></head>
+<head><title>의과대학교</title></head>
 <body>
-<video width="640" height="480" controls>
-<source src="month-7.mp4" type="video/mp4">
-</video>
+<table>
+<tr>
+<td><img src=의대과.png></td>
+<td><img src=본과.png></td>
+<td><img src=국가고시.png></td>
+</tr>
+</table>
 </body>
 </html>
