--- a/right4.html
+++ b/right4.html
@@ -4,7 +4,7 @@
 <table>
 <tr>
 <td><img src=의대과.png></td>
-<td><img src=본과.png></td>
+<td><img src=인기도.png></td>
 <td><img src=국가고시.png></td>
 </tr>
 </table>
