--- a/right4.html
+++ b/right4.html
@@ -5,7 +5,7 @@
 <tr>
 <td><img src=의대과.png></td>
 <td><img src=인기도.png></td>
-<td><img src=국가고시.png></td>
+<td><img src=과선호도.png></td>
 </tr>
 </table>
 </body>
